Style post headings

--- a/react-demo-router_example/src/index.css
+++ b/react-demo-router_example/src/index.css
@@ -47,6 +47,11 @@ a.active::after {
   transition: all ease 0.3s;
 }
 
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
 h1 a {
   color: white;
 }
@@ -82,10 +87,6 @@ main {
   padding: 4rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 .boxes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -108,7 +109,11 @@ h1 {
 
 .post h2 {
   margin-top: 2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
+}
+
+.post h4 {
+  margin-top: 0;
 }
 
 .post p {
